--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "scripts": {
     "be:watch": "ts-node-dev --respawn --transpileOnly src/index.ts",
     "fe:watch": "parcel watch ./src/frontend/index.html",
+    "build": "parcel build ./src/frontend/index.html",
+    "start": "ts-node ./src/index.ts",
     "watch": "yarn fe:watch & yarn be:watch",
-    "lint": "eslint ./src --ext .ts,.tsx"
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "task:watch": "ts-node-dev --respawn --transpileOnly src/task/index.ts"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.30",
@@ -28,6 +31,7 @@
     "eslint": "^6.8.0",
     "parcel": "^1.12.4",
     "sass": "^1.26.3",
+    "ts-node": "^8.8.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
@@ -54,7 +58,8 @@
     ],
     "env": {
       "browser": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off",
