--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "cookie": "^0.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
