--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-github-btn": "^1.2.0",
     "sequelize": "^5.21.6"
   },
   "eslintConfig": {
